# USV-Platform-TWAAOS-

./: .dockerignore  .env.example  .gitignore  Dockerfile  body.json  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
app/: globals.css  layout.tsx  page.tsx
app/api/registrations/: route.ts
app/api/scrape/: route.ts
app/auth/callback/: route.ts
app/auth/error/: page.tsx
app/auth/login/: page.tsx
app/auth/sign-up/: page.tsx
app/auth/sign-up-success/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/calendar/: page.tsx
app/dashboard/events/: page.tsx
app/dashboard/my-events/: page.tsx
app/dashboard/notifications/: page.tsx
app/dashboard/scraping/: page.tsx
app/dashboard/settings/: page.tsx
app/events/: page.tsx
backend/: .env  Dockerfile  main.py  pyproject.toml
components/admin/: stats-charts.tsx  user-role-select.tsx
components/dashboard/: header.tsx  sidebar.tsx
components/events/: event-calendar.tsx  event-card.tsx  event-feedback-form.tsx  event-filters.tsx  event-form.tsx  export-button.tsx  register-button.tsx
components/notifications/: notification-toast.tsx  notifications-list.tsx
components/settings/: profile-form.tsx
components/subscriptions/: category-subscriptions.tsx  subscriptions-list.tsx
lib/: types.ts  utils.ts
lib/supabase/: client.ts  middleware.ts  server.ts
scripts/: 001_create_tables.sql  002_rls_policies.sql  003_seed_data.sql  004_public_access.sql  005_event_feedback.sql  006_participation_mode.sql  complete_setup.sql
(+9 files in other folders)
